--- a/wsgi/mysite/templates/Lingo/base_bootstrap.html
+++ b/wsgi/mysite/templates/Lingo/base_bootstrap.html
@@ -13,7 +13,7 @@
     <link href="{{STATIC_URL}}bootstrap-3.0.0/dist/css/bootstrap.css" rel="stylesheet">
     <!-- Jquery -->
     <script language="javascript" type="text/javascript" href="{{ STATIC_URL}}bootstrap-3.0.0/dist/js/bootstrap.min.js"></script>
-    <script language="javascript" type="text/javascript" href="{{ STATIC_URL}}js/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
     <!-- Custom styles for this template -->
     
 
