--- a/wsgi/mysite/templates/lingue/base.html
+++ b/wsgi/mysite/templates/lingue/base.html
@@ -28,7 +28,7 @@
 
   <body>
 
-    <div class="container">
+    <div class="container" style="margin-top:10px">
         {% if user.is_authenticated %}
           {% block content %}
           {% endblock %}
