--- a/wsgi/mysite/templates/linguo/base.html
+++ b/wsgi/mysite/templates/linguo/base.html
@@ -44,7 +44,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/linguo/logout">Logout</a></li>
             <li>
               <form class="navbar-form navbar-right" role="search">
                 <div class="form-group">
@@ -64,7 +64,7 @@
           {% endblock %}
         {% else %}
           
-          {% block form %}
+          {% block login %}
           {% endblock %}
 
         {% endif %}
