--- a/wsgi/mysite/templates/linguo/login.html
+++ b/wsgi/mysite/templates/linguo/login.html
@@ -1,63 +1,26 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
-
-    <title>Signin Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{ STATIC_URL}}css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <!-- <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet"> -->
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="container" style='padding-top:5px;'>
-
-      <form class="form-signin" action="profile.html">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="text" class="form-control" placeholder="Email address" required autofocus>
-        <input type="password" class="form-control" placeholder="Password" required>
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <!-- <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button> -->
-        <button id='button' class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-      <br>
-        <a href="register.html" class="btn btn-lg btn-danger btn-block" type="submit">Register</a>
-    </div> <!-- /container -->
-
-
-
-
-
-
-
-    <script type="text/javascript">
+{% extends 'linguo/base.html' %}
+{% block login %}
+  {% block form %}
+      <form class="form-signin" id="login_form" method="post" action="/linguo/login/">
+        {% csrf_token %}
+        <h1 class="text-primary text-center">Login</h1>
+        <br>
+        <!-- <input type="text" class="form-control" placeholder="Username" autofocus name="username" value="" id="username" size="50" >
+        <input type="password" class="form-control" placeholder="Password" name="password" value="" id="password" size="50" > -->
         
-    </script>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+        
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Username" name="username" value="" id="username" size="50" >
+          <input type="password" class="form-control" placeholder="Password" name="password" value="" id="password" size="50" >
+          
+        </div>
+        
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <a class="btn btn-lg btn-danger btn-block" href="/Lingo/register/">Register</a>
+      </form>
+       
+
+
+{% endblock %}
+{% endblock %}
+
