--- a/wsgi/mysite/templates/linguo/base.html
+++ b/wsgi/mysite/templates/linguo/base.html
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div class="container" style="margin-top:90px">
+    <div class="container" >
         {% if user.is_authenticated %}
           {% block content %}
           {% endblock %}
