--- a/wsgi/mysite/templates/linguo/base.html
+++ b/wsgi/mysite/templates/linguo/base.html
@@ -43,7 +43,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/linguo/chat2">Chat2</a></li>
             <li><a href="/linguo/logout">Logout</a></li>
             <li>
               <form class="navbar-form navbar-right" role="search">
