--- a/wsgi/mysite/templates/linguo/base.html
+++ b/wsgi/mysite/templates/linguo/base.html
@@ -11,8 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="{{STATIC_URL}}bootstrap-3.0.0/dist/css/bootstrap.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
-    <script language="javascript" type="text/javascript" href="{{ STATIC_URL}}bootstrap-3.0.0/dist/js/bootstrap.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    
 
     <!-- Custom styles for this template -->
 
@@ -37,12 +36,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Linguo</a>
+          <a class="navbar-brand" href="/linguo/">Linguo</a>
 
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="/linguo/">Home</a></li>
             <li><a href="/linguo/chat2">Chat2</a></li>
             <li><a href="/linguo/logout">Logout</a></li>
             <li>
@@ -75,7 +74,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/holder/holder.js"></script>
+    <script src="{{ STATIC_URL}}bootstrap-3.0.0/dist/js/bootstrap.min.js"></script>
+
   </body>
 </html>
