add scroll down function to chat

--- a/wsgi/mysite/templates/linguo/base.html
+++ b/wsgi/mysite/templates/linguo/base.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{STATIC_URL}}bootstrap-3.0.0/dist/css/bootstrap.css" rel="stylesheet">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <!-- Bootstrap core CSS -->
     
 
@@ -73,7 +74,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+
     <script src="{{ STATIC_URL}}bootstrap-3.0.0/dist/js/bootstrap.min.js"></script>
 
   </body>
