--- a/wsgi/mysite/templates/linguo/index.html
+++ b/wsgi/mysite/templates/linguo/index.html
@@ -1,33 +1,179 @@
 {% extends 'linguo/base.html' %}
 {% block content %}
-<div class="row">
+<div class="row" style="padding-top:90px;">
   <div class="col-xs-6 col-sm-6 col-md-3">
     <div class="thumbnail">
-      <img src="http://peterhurley.com/news/wp-content/uploads/2012/03/cali_0002web-375x300.jpg" alt="...">
+      <img src="http://rockyourcareer.files.wordpress.com/2012/11/george_blomgren_med-pic.jpg" style='height:200px;' alt="...">
       <div class="caption">
-        <h3>Sofia Halodo</h3>
+        <h3>Feay</h3>
         <dl>
           <dt>Location</dt>
           <dd>Glasgow</dd>
-          <dt>Langauges</dt>
+          <dt>Langauges <small><a href="">view all</a></small></dt>
           <dd>
-              <ul class="list-inline">
-                <li><span class="label label-primary">German</span></li>
-              </ul>
+            <ul class="list-inline">
+              <li><span class="label label-primary">English</span></li>
+              <li><span class="label label-primary">German</span></li>
+              <li><span class="label label-primary">Chinese</span></li>
+            </ul>
           </dd> 
-          <dt>Interests</dt>
+          <dt>Interests <small><a href="">view all</a></small></dt>
           <dd>
-              <ul class="list-inline">
-                <li><span class="label label-success">Football</span></li>
-                <li><span class="label label-success">Rock Music</span></li>
-                <li><span class="label label-success">Movie</span></li>
-              </ul>
+            <ul class="list-inline">
+              <li><span class="label label-success">Football</span></li>
+              <li><span class="label label-success">Rock Music</span></li>
+              <li><span class="label label-success">Movie</span></li>
+              <li><span class="label label-success">Reading</span></li>
+              <li><span class="label label-success">Party</span></li>
+              <li><span class="label label-success">Cooking</span></li>
+            </ul>
           </dd> 
         </dl>
+        <br>
         <p><a href="/linguo/chat" class="btn btn-primary btn-block" role="button">Chat</a></p>
         <p><a href="#" class="btn btn-default btn-block" role="button">Add Linguist</a></p>
+
       </div>
     </div>
+  </div>
+  <div class="col-xs-6 col-sm-6 col-md-9" >
+    <h3>My Favorite Linguists</h3>
+    <table class="table table-hover">
+      <tr>
+      <th>Picture</th>
+      <th>Name</th>
+      <th>Languages</th>
+      <th>Interests</th>
+      <th>Action</th>
+      </tr>
+      <tr>
+        <td>
+          <img class="media-object" src="http://www.infraxes.com/my-face.jpg" style="height:40px; width:40px;">
+        </td>
+        <td>
+          asdfasd fasdfsdf
+        </td>
+        <td>
+            <ul class="list-inline">
+              <li><span class="label label-primary">English</span></li>
+              <li><span class="label label-primary">German</span></li>
+              <li><span class="label label-primary">Chinese</span></li>
+            </ul>
+        </td> 
+        <td>
+            <ul class="list-inline">
+              <li><span class="label label-success">Football</span></li>
+              <li><span class="label label-success">Rock Music</span></li>
+              <li><span class="label label-success">Movie</span></li>
+              <li><span class="label label-success">Reading</span></li>
+              <li><span class="label label-success">Party</span></li>
+              <li><span class="label label-success">Cooking</span></li>
+            </ul>
+        </td>
+        <td>
+          <a href="/linguo/chat" class="btn btn-primary btn-block" role="button">Chat</a>
+        </td>
+      </tr>
+      
+    </table>
+      <!-- <div class="col-md-6">
+        <div class="media thumbnail">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://www.infraxes.com/my-face.jpg" style="height:70px; width:70px;">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">Jarana Manotumruksa</h3>
+            <strong>Languages</strong>
+            <ul class="list-inline">
+              <li><span class="label label-primary">English</span></li>
+              <li><span class="label label-primary">German</span></li>
+              <li><span class="label label-primary">Chinese</span></li>
+            </ul>
+            <strong>Interests</strong>
+            <ul class="list-inline">
+              <li><span class="label label-success">Football</span></li>
+              <li><span class="label label-success">Rock Music</span></li>
+              <li><span class="label label-success">Movie</span></li>
+              <li><span class="label label-success">Reading</span></li>
+              <li><span class="label label-success">Party</span></li>
+              <li><span class="label label-success">Cooking</span></li>
+            </ul>
+            <br>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Chat</button>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="media thumbnail">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://www.infraxes.com/my-face.jpg" style="height:70px; width:70px;">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">Jarana Manotumruksa</h3>
+            <strong>Languages</strong>
+            <ul class="list-inline">
+              <li><span class="label label-primary">English</span></li>
+              <li><span class="label label-primary">German</span></li>
+              <li><span class="label label-primary">Chinese</span></li>
+            </ul>
+            <strong>Interests</strong>
+            <ul class="list-inline">
+              <li><span class="label label-success">Football</span></li>
+              <li><span class="label label-success">Rock Music</span></li>
+              <li><span class="label label-success">Movie</span></li>
+              <li><span class="label label-success">Reading</span></li>
+              <li><span class="label label-success">Party</span></li>
+              <li><span class="label label-success">Cooking</span></li>
+            </ul>
+            <br>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Chat</button>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="media thumbnail">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://www.infraxes.com/my-face.jpg" style="height:70px; width:70px;">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">Jarana Manotumruksa</h3>
+            
+            <button type="button" class="btn btn-primary btn-lg btn-block">Chat</button>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="media thumbnail">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://www.infraxes.com/my-face.jpg" style="height:70px; width:70px;">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">Jarana Manotumruksa</h3>
+            <strong>Languages</strong>
+            <ul class="list-inline">
+              <li><span class="label label-primary">English</span></li>
+              <li><span class="label label-primary">German</span></li>
+              <li><span class="label label-primary">Chinese</span></li>
+            </ul>
+            <strong>Interests</strong>
+            <ul class="list-inline">
+              <li><span class="label label-success">Football</span></li>
+              <li><span class="label label-success">Rock Music</span></li>
+              <li><span class="label label-success">Movie</span></li>
+              <li><span class="label label-success">Reading</span></li>
+              <li><span class="label label-success">Party</span></li>
+              <li><span class="label label-success">Cooking</span></li>
+            </ul>
+            <br>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Chat</button>
+          </div>
+
+        </div>
+      </div> -->
+    <!-- </div> -->
   </div>
 </div>
 {% endblock %}
