--- a/wsgi/mysite/templates/linguo/friend.html
+++ b/wsgi/mysite/templates/linguo/friend.html
@@ -1,94 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap core CSS -->
-    
-
-    <!-- Custom styles for this template -->
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="container" style='padding-top:5px;'>
-        <div class="col-xs-4 col-sm-4">
+{% extends 'linguo/base.html' %}
+{% block content %}
+  <div class="container" style='padding-top:90px;'>
+        <div class="col-xs-3 col-sm-3">
           <div class="thumbnail">
-            <img src="http://peterhurley.com/news/wp-content/uploads/2012/03/cali_0002web-375x300.jpg" alt="...">
-            <div class="caption">
-              <h3>Sofia Halodo</h3>
-              <p><a href="chat.html" class="btn btn-primary btn-block" role="button">Chat</a></p>
-              <p><a href="#" class="btn btn-danger btn-block" role="button">UnFriend</a></p>
-            </div>
-          </div>
-          <div class="thumbnail">
-            <img src="http://iros2008.inria.fr/kanade.jpg" alt="...">
-            <div class="caption">
-              <h3>Lee Chuenge</h3>
-              <p><a href="chat.html" class="btn btn-primary btn-block" role="button">Chat</a></p>
-              <p><a href="#" class="btn btn-danger btn-block" role="button">UnFriend</a></p>
-            </div>
-          </div>
+      <img src="http://rockyourcareer.files.wordpress.com/2012/11/george_blomgren_med-pic.jpg" alt="...">
+      <div class="caption">
+        <h3>Feay</h3>
+        <dl>
+          <dt>Location</dt>
+          <dd>Glasgow</dd>
+          <dt>Langauges <small><a href="">view all</a></small></dt>
+          <dd>
+            <ul class="list-inline">
+              <li><span class="label label-primary">English</span></li>
+              <li><span class="label label-primary">German</span></li>
+              <li><span class="label label-primary">Chinese</span></li>
+            </ul>
+          </dd> 
+          <dt>Interests <small><a href="">view all</a></small></dt>
+          <dd>
+            <ul class="list-inline">
+              <li><span class="label label-success">Football</span></li>
+              <li><span class="label label-success">Rock Music</span></li>
+              <li><span class="label label-success">Movie</span></li>
+              <li><span class="label label-success">Reading</span></li>
+              <li><span class="label label-success">Party</span></li>
+              <li><span class="label label-success">Cooking</span></li>
+            </ul>
+          </dd> 
+        </dl>
+        <br>
+        <p><a href="/linguo/chat" class="btn btn-primary btn-block" role="button">Chat</a></p>
+        <p><a href="#" class="btn btn-default btn-block" role="button">Add Linguist</a></p>
+
+      </div>
+    </div>
         </div>
-        <div class="col-xs-4 col-sm-4">
-          <div class="thumbnail">
-            <img src="http://henryzecher.com/BurtLancaster.jpg" alt="...">
-            <div class="caption">
-              <h3>Uncle Sam</h3>
-              <p><a href="chat.html" class="btn btn-primary btn-block" role="button">Chat</a></p>
-              <p><a href="#" class="btn btn-danger btn-block" role="button">UnFriend</a></p>
-            </div>
-          </div>
-          <div class="thumbnail">
-            <img src="http://polari.polariarts.netdna-cdn.com/wp-content/uploads/2011/11/Charles-Lambert-Any-Human-Face.jpg" alt="...">
-            <div class="caption">
-              <h3>Max Temi</h3>
-              <p><a href="chat.html" class="btn btn-primary btn-block" role="button">Chat</a></p>
-              <p><a href="#" class="btn btn-danger btn-block" role="button">UnFriend</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-4 col-sm-4">
-          <div class="thumbnail">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREhjt2RGePxQhyy9WlE1zipmYO70AUI4GHeQZzbWA-YeQBZ49bug" alt="...">
-            <div class="caption">
-              <h3>TiimyJason</h3>
-              <p><a href="chat.html" class="btn btn-primary btn-block" role="button">Chat</a></p>
-              <p><a href="#" class="btn btn-danger btn-block" role="button">UnFriend</a></p>
-            </div>
-          </div>
-          <div class="thumbnail">
-            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQEu-ZUaEbtyv0jN9AGUWLpyD2ZodMRzP1P0Tg6FPTURlvUQBzN" alt="...">
-            <div class="caption">
-              <h3>Caterlean</h3>
-              <p><a href="chat.html" class="btn btn-primary btn-block" role="button">Chat</a></p>
-              <p><a href="#" class="btn btn-danger btn-block" role="button">UnFriend</a></p>
-            </div>
-          </div>
-        </div>
-    </div> <!-- /container -->
+    </div>
+{% endblock %}
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/holder/holder.js"></script>
-  </body>
-</html>
+     
