create new database

--- a/wsgi/mysite/templates/linguo/base.html
+++ b/wsgi/mysite/templates/linguo/base.html
@@ -30,8 +30,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/linguo/">Home</a></li>
-            <li class=""><a href="/linguo/profile">Search Result</a>
-            <li><a href="/linguo/chat2">Chat2</a></li>
+            <li class=""><a href="/linguo/profile">Find Linguists</a>
+            <li><a href="/linguo/chat">Chat</a></li>
             <li><a href="/linguo/logout">Logout</a></li>
             <li>
               <form class="navbar-form navbar-right" role="search">
