--- a/wsgi/mysite/templates/linguo/chat.html
+++ b/wsgi/mysite/templates/linguo/chat.html
@@ -15,14 +15,12 @@
     max-height:80%;
 }
 
-span {
-    display: none;
-  }
+
 
 
 </style>
 <div style="">
-	<div class="list-group col-md-3 col-sm-12 col-xs-12" style="margin-top:90px;">
+	<div class="list-group col-md-3 hideen-sm hidden-xs" style="margin-top:90px;">
   		<a href="#" class="list-group-item active">
 	  		<span class="badge">14</span>
 			Cras justo odio
@@ -77,8 +75,7 @@ span {
 			  <a class="pull-left" href="#">
 			    <img class="media-object" src="http://www.infraxes.com/my-face.jpg" style="height:50px; width:50px;">
 			  </a>
-			  	<div class="media-body">
-				    <h4 class="media-heading">Me</h4>
+			  	<div class="media-body">				    <h4 class="media-heading">Me</h4>
 				    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odioa congue felis in faucibus.</p>
 				</div>
 			</div>
