--- a/wsgi/mysite/templates/linguo/index.html
+++ b/wsgi/mysite/templates/linguo/index.html
@@ -3,7 +3,7 @@
 <div class="row" style="padding-top:90px;">
   <div class="col-xs-6 col-sm-6 col-md-3">
     <div class="thumbnail">
-      <img src="http://rockyourcareer.files.wordpress.com/2012/11/george_blomgren_med-pic.jpg" style='height:200px;' alt="...">
+      <img src="{{ STATIC_URL}}test.jpg" style='height:200px;' alt="...">
       <div class="caption">
         <h3>Feay</h3>
         <dl>
@@ -48,7 +48,7 @@
       </tr>
       <tr>
         <td>
-          <img class="media-object" src="http://www.infraxes.com/my-face.jpg" style="height:40px; width:40px;">
+          <img class="media-object" src="{{ STATIC_URL}}women.png" style="height:40px; width:40px;">
         </td>
         <td>
           asdfasd fasdfsdf
