--- a/wsgi/mysite/templates/linguo/login.html
+++ b/wsgi/mysite/templates/linguo/login.html
@@ -1,14 +1,11 @@
 {% extends 'linguo/base.html' %}
 {% block login %}
-  {% block form %}
-      <form class="form-signin" id="login_form" method="post" action="/linguo/login/">
-        {% csrf_token %}
-        <h1 class="text-primary text-center">Login</h1>
-        <br>
-        <!-- <input type="text" class="form-control" placeholder="Username" autofocus name="username" value="" id="username" size="50" >
-        <input type="password" class="form-control" placeholder="Password" name="password" value="" id="password" size="50" > -->
-        
-        
+{% block form %}
+<div class="row" style="padding-top:70px;max-width: 330px;margin: 0 auto;">
+  <form class="form-signin" id="login_form" method="post" action="/linguo/login/" style="max-width:400px;">
+    {% csrf_token %}
+    <h1 class="text-primary text-center">Linguo</h1>
+    <br>
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Username" name="username" value="" id="username" size="50" >
           <input type="password" class="form-control" placeholder="Password" name="password" value="" id="password" size="50" >
@@ -16,11 +13,11 @@
         </div>
         
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a class="btn btn-lg btn-danger btn-block" href="/Lingo/register/">Register</a>
+        <a class="btn btn-lg btn-danger btn-block" href="/linguo/register/">Register</a>
       </form>
-       
+    </div>     
 
 
-{% endblock %}
-{% endblock %}
+    {% endblock %}
+    {% endblock %}
 
