--- a/wsgi/mysite/templates/linguo/register.html
+++ b/wsgi/mysite/templates/linguo/register.html
@@ -1,66 +1,13 @@
+{% extends 'linguo/base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
-
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <!-- <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet"> -->
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-    
-    <div class="container">
-        <form role="form" action="login.html">
-          <h2 class="form-signin-heading">Registration</h2>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Username</label>
-            <input type="text" class="form-control" placeholder="Username">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
-        </form>
-      
-    </div>
-
-
-
-
-
-
-
-    <script type="text/javascript">
-        
-    </script>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+{% block login %}
+<div class="row" style="padding-top:70px;max-width: 330px;margin: 0 auto;">
+          <h2 class='text-primary'>Registation</h2>
+          <FORM id="user_form" enctype="multipart/form-data" method="post" action="/linguo/register/">
+                  {% csrf_token %}
+                  {{ uform.as_p }}
+                  {{ pform.as_p }}
+                <INPUT class='btn btn-primary btn-lg btn-block'type="submit" name="submit" value="submit" />
+          </FORM>
+</div>
+{% endblock %}
